# epubmangler

./: .gitignore  Dockerfile  LICENSE  MANIFEST.in  README  README.md  TODO  TODO.md  book.py  edit.py  epub.py  epubmangler.py  example.py  globals.py  grab_books.py  headerbar.xml  index.md  main.py  menu.xml  parse.py  pyproject.toml  rename_epubs.py  requirements.txt  setup.cfg  setup.py  tests.py  ui.py  util.py  widgets.xml  window.xml
epubmangler/: __init__.py  epub.py  functions.py  globals.py
example/: Frankenstein.epub  example.py  rename_epubs.py
gtk/: README.md  edit.py  epubmangler.desktop  widgets.xml
web/: epubmangler  main.py  tidy.py  web.py
web/static/: main.html  style.css  template.html
web/templates/: base.jinja2
