[project]
name = "epubmangler"
version = "0.1.0"
description = "Tools to modify the metadata of .epub format ebooks"
readme = "README.md"
authors = [{name = "David Keogh", email = "davidtkeogh@gmail.com"}]
keywords = ["epub", "book"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
]
requires-python = ">=3.8"
dependencies = []

[project.urls]
Homepage = "https://github.com/davekeogh/epubmangler"
Issues = "https://github.com/davekeogh/epubmangler/issues"

[tool.setuptools]
py-modules = ["epubmangler"]
