[metadata]
name = epubmangler
version = 0.0.1
author = David Keogh
author_email = davidtkeogh@gmail.com
description = Tools to modify the metadata of .epub format ebooks
long_description = file: README.md
long_description_content_type = text/markdown
keywords = epub ebook
license_file = LICENSE
package_data = 
url = https://github.com/davekeogh/epubmangler
project_urls =
    Bug Tracker = https://github.com/davekeogh/epubmangler/issues
classifiers =
    Programming Language :: Python :: 3
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Development Status :: 2 - Pre-Alpha

[options]
include_package_data = True
packages = find:
python_requires = >=3.6
scripts =
    example.py
    rename_epubs.py
